--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/ssung1/ubipong-ui-ng/issues"
   },
-  "homepage": "https://github.com/ssung1/ubipong-ui-ng#readme"
+  "homepage": "https://github.com/ssung1/ubipong-ui-ng#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "@angular/cli": "^6.1.3"
+  }
 }
