Use cypress-wait-until

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "^6.0.0",
     "cypress": "^5.5.0",
+    "cypress-wait-until": "^1.7.1",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
