--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
               "apps/ubipong-ui/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "apps/ubipong-ui/src/styles.scss"
             ],
             "scripts": []
