--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /out-tsc
 
 # dependencies
-/node_modules
+node_modules
 
 # IDEs and editors
 /.idea
@@ -33,8 +33,9 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
-/apps/ubipong-ui-e2e/debug.log
 
 # System Files
 .DS_Store
 Thumbs.db
+
+.angular
